Fix about skills column large top padding on small screens

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -217,18 +217,16 @@ section#about {
   }
   .col {
     width: 100%;
-    // padding-top: 50px;
-    padding-top: 300px;
     padding-left: 5%;
     padding-right: 5%;
     padding-bottom: 100px;
-    // margin: auto 0;
   }
   
-  // #about-content {
-
-  // }
+  #about-content {
+    padding-top: 300px;    
+  }
   #about-skills {
+    padding-top: 100px;
     background-color: $grey;
     color: $white;
   }
@@ -397,6 +395,7 @@ footer {
   #project-link {
     // margin: 50px 0;
   }
+
 }
 
 // MEDIA QUERIES
@@ -415,6 +414,7 @@ footer {
     flex-basis: 50% !important;
   }
   .about-container .col {
+    padding-top: 300px !important;
     min-height: 100vh !important;
   }
   .project-item {
